Fix sidebar overflowing

--- a/front/src/app/app.component.sass
+++ b/front/src/app/app.component.sass
@@ -9,7 +9,6 @@
 // SIDEBAR
 .sidebar
   height: 100%
-  width: 100%
   grid-area: sidebar
   background-color: $primaryColor
   display: grid
@@ -57,8 +56,6 @@
 
 @media (min-width: 600px)
   .layout
-    // height: 100%
-    // width: 100%
     display: grid
     grid-template-areas: "sidebar content"
     grid-template-columns: 33% 67%
